// SPDX-License-Identifier: MIT
// Copyright (c) 2025 Sorcha Contributors

using Microsoft.Extensions.Configuration;
using Microsoft.Extensions.Logging;

namespace Sorcha.ServiceClients.Wallet;

/// <summary>
/// gRPC/HTTP client for Wallet Service operations
/// </summary>
public class WalletServiceClient : IWalletServiceClient
{
    private readonly ILogger<WalletServiceClient> _logger;
    private readonly string _serviceAddress;
    private readonly bool _useGrpc;

    public WalletServiceClient(
        IConfiguration configuration,
        ILogger<WalletServiceClient> logger)
    {
        _logger = logger ?? throw new ArgumentNullException(nameof(logger));

        _serviceAddress = configuration["ServiceClients:WalletService:Address"]
            ?? configuration["GrpcClients:WalletService:Address"]
            ?? throw new InvalidOperationException("Wallet Service address not configured");

        _useGrpc = configuration.GetValue<bool>("ServiceClients:WalletService:UseGrpc", false);

        _logger.LogInformation(
            "WalletServiceClient initialized (Address: {Address}, Protocol: {Protocol})",
            _serviceAddress, _useGrpc ? "gRPC" : "HTTP");
    }

    // =========================================================================
    // System Wallet Operations
    // =========================================================================

    public async Task<string> CreateOrRetrieveSystemWalletAsync(
        string validatorId,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Creating or retrieving system wallet for validator {ValidatorId}", validatorId);

            // TODO: Implement gRPC/HTTP call to Wallet Service
            // For MVP, return a deterministic placeholder wallet ID
            _logger.LogWarning("Wallet Service integration not yet implemented - using placeholder");

            var walletId = $"system-wallet-{validatorId}";
            return await Task.FromResult(walletId);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to create/retrieve system wallet for validator {ValidatorId}", validatorId);
            throw;
        }
    }

    // =========================================================================
    // Signing Operations
    // =========================================================================

    public async Task<string> SignDataAsync(
        string walletId,
        string dataToSign,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Signing data with wallet {WalletId}", walletId);

            // TODO: Implement gRPC/HTTP call to Wallet Service
            _logger.LogWarning("Wallet Service signing not yet implemented - returning placeholder");

            var signature = Convert.ToBase64String(
                System.Text.Encoding.UTF8.GetBytes($"signature-{walletId}-{DateTimeOffset.UtcNow.Ticks}"));

            return await Task.FromResult(signature);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to sign data with wallet {WalletId}", walletId);
            throw;
        }
    }

    public async Task<string> SignTransactionAsync(
        string walletAddress,
        byte[] transactionData,
        string? derivationPath = null,
        CancellationToken cancellationToken = default)
    {
        try
        {
            if (string.IsNullOrWhiteSpace(derivationPath))
            {
                _logger.LogDebug("Signing transaction with wallet {WalletAddress}", walletAddress);
            }
            else
            {
                _logger.LogDebug(
                    "Signing transaction with wallet {WalletAddress} using derivation path {DerivationPath}",
                    walletAddress, derivationPath);
            }

            // TODO: Implement gRPC/HTTP call to Wallet Service
            _logger.LogWarning("Wallet Service transaction signing not yet implemented - returning placeholder");

            var signatureBytes = System.Text.Encoding.UTF8.GetBytes(
                $"tx-signature-{walletAddress}-{derivationPath ?? "default"}-{DateTimeOffset.UtcNow.Ticks}");

            var signatureBase64 = Convert.ToBase64String(signatureBytes);
            return await Task.FromResult(signatureBase64);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to sign transaction with wallet {WalletAddress}", walletAddress);
            throw;
        }
    }

    public async Task<bool> VerifySignatureAsync(
        string publicKey,
        string data,
        string signature,
        string algorithm,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Verifying signature with public key {PublicKey}", publicKey);

            // TODO: Implement gRPC/HTTP call to Wallet Service
            _logger.LogWarning("Wallet Service signature verification not yet implemented - assuming valid");

            return await Task.FromResult(true);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to verify signature");
            return false;
        }
    }

    // =========================================================================
    // Encryption Operations
    // =========================================================================

    public async Task<byte[]> EncryptPayloadAsync(
        string recipientWalletAddress,
        byte[] payload,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Encrypting payload for wallet {WalletAddress}", recipientWalletAddress);

            // TODO: Implement gRPC/HTTP call to Wallet Service
            _logger.LogWarning("Wallet Service encryption not yet implemented - returning placeholder");

            var encrypted = System.Text.Encoding.UTF8.GetBytes(
                $"encrypted-{recipientWalletAddress}-{Convert.ToBase64String(payload)}");

            return await Task.FromResult(encrypted);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to encrypt payload for wallet {WalletAddress}", recipientWalletAddress);
            throw;
        }
    }

    public async Task<byte[]> DecryptPayloadAsync(
        string walletAddress,
        byte[] encryptedPayload,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Decrypting payload with wallet {WalletAddress}", walletAddress);

            // TODO: Implement gRPC/HTTP call to Wallet Service
            _logger.LogWarning("Wallet Service decryption not yet implemented - returning placeholder");

            var decrypted = System.Text.Encoding.UTF8.GetBytes($"decrypted-{walletAddress}");
            return await Task.FromResult(decrypted);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to decrypt payload with wallet {WalletAddress}", walletAddress);
            throw;
        }
    }

    public async Task<byte[]> DecryptWithDelegationAsync(
        string walletAddress,
        byte[] encryptedPayload,
        string delegationToken,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Decrypting payload with delegation for wallet {WalletAddress}",
                walletAddress);

            // TODO: Implement gRPC/HTTP call to Wallet Service
            _logger.LogWarning("Wallet Service delegated decryption not yet implemented - returning placeholder");

            var decrypted = System.Text.Encoding.UTF8.GetBytes($"delegated-decrypt-{walletAddress}");
            return await Task.FromResult(decrypted);
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to decrypt payload with delegation for wallet {WalletAddress}",
                walletAddress);
            throw;
        }
    }

    // =========================================================================
    // Wallet Management
    // =========================================================================

    public async Task<WalletInfo?> GetWalletAsync(
        string walletAddress,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Getting wallet info for {WalletAddress}", walletAddress);

            // TODO: Implement gRPC/HTTP call to Wallet Service
            _logger.LogWarning("Wallet Service wallet query not yet implemented - returning placeholder");

            var wallet = new WalletInfo
            {
                Address = walletAddress,
                Name = $"Wallet {walletAddress}",
                PublicKey = Convert.ToBase64String(System.Text.Encoding.UTF8.GetBytes($"pubkey-{walletAddress}")),
                Algorithm = "ED25519",
                Status = "Active",
                Owner = "system",
                Tenant = "default",
                CreatedAt = DateTime.UtcNow.AddDays(-30),
                UpdatedAt = DateTime.UtcNow
            };

            return await Task.FromResult(wallet);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to get wallet info for {WalletAddress}", walletAddress);
            return null;
        }
    }

    public async Task<WalletInfo> CreateWalletAsync(
        string name,
        string algorithm,
        string owner,
        string tenant,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Creating wallet {Name} with algorithm {Algorithm}", name, algorithm);

            // TODO: Implement gRPC/HTTP call to Wallet Service
            _logger.LogWarning("Wallet Service wallet creation not yet implemented - returning placeholder");

            var wallet = new WalletInfo
            {
                Address = Guid.NewGuid().ToString("N"),
                Name = name,
                PublicKey = Convert.ToBase64String(System.Text.Encoding.UTF8.GetBytes($"pubkey-{name}")),
                Algorithm = algorithm,
                Status = "Active",
                Owner = owner,
                Tenant = tenant,
                CreatedAt = DateTime.UtcNow,
                UpdatedAt = DateTime.UtcNow
            };

            return await Task.FromResult(wallet);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to create wallet {Name}", name);
            throw;
        }
    }
}
